// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can accept a component factory if you're lazy 1`] = `
<div>
  <div
    class="some-div"
  >
    hello
  </div>
  <button>
    foobar
  </button>
</div>
`;

exports[`can create snapshots easily 1`] = `
<div>
  <div
    class="some-div"
  >
    hello
  </div>
  <button>
    bar
  </button>
</div>
`;

exports[`can snapshot part of component 1`] = `
<div
  className="some-div"
>
  hello
</div>
`;

exports[`can use helper as snapshot function 1`] = `
<DummyComponent
  text="snap"
>
  <div>
    <div
      className="some-div"
    >
      hello
    </div>
    <button>
      snap
    </button>
  </div>
</DummyComponent>
`;

exports[`provides access to the Enzyme wrapper if need be 1`] = `
<div
  className="some-div"
>
  hello
</div>
`;

exports[`provides access to the Enzyme wrapper if need be 2`] = `
<DummyComponent
  text="bar"
>
  <div>
    <div
      className="some-div"
    >
      hello
    </div>
    <button>
      bar
    </button>
  </div>
</DummyComponent>
`;
